# libuni

./: .gitignore  CMakeLists.txt  Makefile  README.org
include/libuni/: case.hpp  codepoint.hpp  codepoint_string.hpp  normalization.hpp  segmentation.hpp  utf.hpp  utf16.hpp  utf32.hpp  utf8.hpp  utf_convert.hpp
src/: CMakeLists.txt  case.c++  create_two_stage_table.c++  generate_two_stage_table.c++  normalization.c++  segmentation.c++
test/: CMakeLists.txt  test_case.c++  test_generate_two_stage_table.c++  test_normalization.c++  test_segmentation.c++  test_utf16.c++  test_utf32.c++  test_utf8.c++  test_utf_convert.c++
